@@ -4,7 +4,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>google</groupId>
-    <artifactId>interview</artifactId>
+    <artifactId>selenium</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
@@ -111,14 +111,6 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>${project.basedir}/src/test/resources/testsuites/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <argLine>
-                        --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-                        --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-                        --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-                        --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-                        --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
-                        --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
